--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "PAIcam",
+    "name": "PAIcamJulian",
     "slug": "PAIcam",
     "version": "1.0.0",
     "orientation": "portrait",
