--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "expo": "~48.0.15",
     "expo-camera": "~13.2.1",
     "expo-image-manipulator": "~11.1.1",
+    "expo-media-library": "~15.2.3",
+    "expo-screen-orientation": "^5.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
-    "react-native-web": "~0.18.10",
-    "expo-media-library": "~15.2.3"
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
