--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "buildAndroid": "eas build -p android --profile preview",
+    "buildIos": "eas build --platform ios"
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
