change name and icon

--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
   "expo": {
-    "name": "PAIcamJulian",
+    "name": "PAIcam",
     "slug": "PAIcam",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
